Class4/vpc.tf
# provider aws {
#     region = "us-east-2"
# }

resource "aws_vpc" "main"{
    cidr_block = "10.0.0.0/16"

    tags = {
      Name = "my-vpc"
    }
}

resource "aws_subnet" "main"{
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-2a"
    map_public_ip_on_launch = true

    tags = {
        Name = "subnet1"
    }

}

resource "aws_subnet" "main2"{
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-east-2b"
    map_public_ip_on_launch = true

    tags = {
        Name = "subnet2"
    }
}

resource "aws_internet_gateway" "gw" {
    vpc_id = aws_vpc.main.id

    tags = {
      Name = "example"
    }
  
}

resource "aws_route_table" "example"{
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }
    tags = {
      Name = "example"
    }
}

resource "aws_route_table_association" "a"{
    subnet_id   = aws_subnet.main.id
    route_table_id = aws_route_table.example.id

}

resource "aws_route_table_association" "b"{
    subnet_id   = aws_subnet.main2.id
    route_table_id = aws_route_table.example.id

}
